# Cloudy-Climb

./: .gitignore  LICENSE  README.md  meson.build
assets/: Bonus.xml  Cloud.xml  Cloud_Strong.xml  Goal.xml  Player.xml  SpikeBall.xml  level1.lev  level10.lev  level2.lev  level3.lev  level4.lev  level5.lev  level6.lev  level7.lev  level8.lev  level9.lev  transition.frag
src/: audiomanager.c  audiomanager.h  bonus.c  bonus.h  cloud.c  cloud.h  entity.c  entity.h  game_controls.c  game_controls.h  gameloop.c  gameloop.h  goal.c  goal.h  io.c  io.h  main.c  menu.c  menu.h  meson.build  player.c  player.h  rail.c  rail.h  renderer.c  renderer.h  spike.c  spike.h
src/editor/: CloudyGame.vapi  EditorApp.vala  MainWindow.ui  MainWindow.vala  cloudy.css  editor.c  editor.gresource.xml  editor.h  main.vala  meson.build
subprojects/: dfgame.wrap
